# PiFrame

./: .gitignore  README.md  const.py  main.py  piframe.service  pyproject.toml
atkinson_rs/: Cargo.toml  pyproject.toml
atkinson_rs/src/: lib.rs
dev/: test_image_processing.py
lib/: epd13in3E.py  source.md
src/dev/: test_image_processing.py
src/piframe/: const.py  main.py
src/piframe/lib/: epd13in3E.py
src/piframe/utils/: color_mapping_utils.py  image_utils.py
utils/: akinson_dithering.py  image_utils.py  open_street_map_utils.py
