[project]
name = "piframe"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "piexif>=1.1.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "uvicorn>=0.40.0",
    "atkinson-rs",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["atkinson_rs"]

[tool.uv.sources]
atkinson-rs = { workspace = true }

[project.optional-dependencies]
dev = [
    "maturin>=1.10.2",
]
